finished editing, some spacing issues and also the bug on the edit and create modules

--- a/src/components/TeeterTotter/TeeterTotter.module.css
+++ b/src/components/TeeterTotter/TeeterTotter.module.css
@@ -60,7 +60,7 @@
 
 .gremlin{
     position: absolute;
-    bottom: 7.4%;
+    bottom: 7.6%;
     padding: 0;
     margin: 0;
 }
